# CaliRoute

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
EVRPTW_Benchmark/: __init__.py
EVRPTW_Benchmark/Reinforcement_Learning/: __init__.py
ablation/: __init__.py  dapg.py
caliroute/: __init__.py  cli.py  config.py  methods.py
configs/templates/: slppo_cus100_public.yaml
docs/: project_layout.md  review_and_ablation_plan.md
evrptw_core/: __init__.py  io.py  schema.py  validation.py
evrptw_hierarchy/: __init__.py
evrptw_hierarchy/configs/: config.py
evrptw_hierarchy/core/: models.py
evrptw_hierarchy/generation/: generator.py  region_generator.py  territory_pool.py
evrptw_hierarchy/geospatial/: __init__.py  builder.py
evrptw_hierarchy/graph/: distance_oracle.py  road_graph.py  shortest_path.py
evrptw_hierarchy/io/: persistence.py
evrptw_hierarchy/sampling/: active_day.py  cs_activation.py  daily_models.py
evrptw_hierarchy/validation/: reports.py
evrptw_hierarchy/visualization/: plots.py
offline2online/: __init__.py  instance_adapter.py  offline_data.py  train.py  trainer.py
offline2online/integrations/: __init__.py  evrptw_db.py
offline2online/models/: __init__.py  graph_attention_model_wrapper.py
scripts/ablation/: README.md  common_ablation.sh  compute_rdi_nn_match.py  init_ppo100_1gpu.sh  run_server1_expert_budget_incumbent.sh  run_server2_rdi.sh  run_server3_agda_progressive_slppo.sh  run_server4_ntraj_feature_groups.sh  server2_rdi_4gpu.sh  (+9 more)
tests/: test_instance_adapter.py  test_partition_loss.py
(+52 files in other folders)
